--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.14",
+    "langchain": "^0.0.63",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "serpapi": "^1.1.1",
     "tailwindcss": "3.3.1"
   }
 }
